# rethon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  lefthook.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  pr-title.yml
crates/lexer/: Cargo.toml  README.md
crates/lexer/examples/: lex.rs
crates/lexer/tests/: test_errors.rs  test_macros.rs  test_operators.rs  test_scopes.rs  test_strings.rs
crates/parser/: README.md
crates/parser/src/: lib.rs
libs/aggregator/: Cargo.toml
libs/aggregator/src/: lib.rs  tests.rs
libs/lexer/: README.md
libs/lexer/examples/: lex.rs
libs/lexer/src/: lib.rs
libs/lexer/tests/: control_flow.rs  functions.rs  invocations.rs  lex.rs  numbers.rs  otherwise.rs  scopes.rs  strings.rs  test_assignments.rs  test_conditionals.rs  test_control_flow.rs  test_functions.rs  test_invocations.rs  test_lex.rs  test_loops.rs  test_macros.rs  test_match.rs  test_numbers.rs  test_operators.rs  test_scopes.rs  test_tokenize.rs  test_type_definitions.rs
libs/parser/: Cargo.toml  GRAMMAR.md
libs/parser/src/: block.rs  if.rs  lib.rs  match.rs  pattern.rs  statement.rs  type.rs
libs/scoper/: Cargo.toml  README.md
libs/scoper/examples/: tokenize.rs
libs/scoper/src/: lib.rs
libs/scoper/tests/: numbers.rs  operators.rs  otherwise.rs  scopes.rs  type_definitions.rs
libs/structurizer/: Cargo.toml
libs/structurizer/src/: lib.rs  tests.rs
libs/tokenizer/: Cargo.toml
libs/tokenizer/examples/: tokenize.rs
libs/tokenizer/src/: lib.rs  tests.rs  types.rs
(+68 files in other folders)
